<resources>
    <string name="app_name">CleanApp</string>
    <string name="when_do_you_want_your_place_to_be_cleaned">When do you want your place to be cleaned?</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="would_you_like_to_change_the_rooms">Would you like to change the rooms?</string>
    <string name="apply">Apply</string>
    <string name="save_changes">Save changes</string>
    <string name="email">Email:</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password:</string>
    <string name="remember_me">Remember Me</string>
    <string name="signup">SignUp</string>
    <string name="sing_up">Sing Up</string>
    <string name="full_name">Full Name:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="where_do_you_live">Where do you live?</string>
    <string name="back_arrow">back_arrow</string>
    <string name="select_time">Select Time</string>
    <string name="location_permission">This app requires permission to be granted in order to work properly</string>
    <string name="error">Error</string>
    <string name="close">close</string>
    <string name="home">home</string>
    <string name="favorite">favorite</string>
    <string name="wallet">wallet</string>
    <string name="order">order</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="per_hour">&lt;font face=”sans_serif“ color=”#222222”> %1$.2f ₾ &lt;/font> / hour</string>

    <!--    Reservation-->
    <string name="reviews">&lt;font face=”sans_serif“ color=”#FF795B”> &lt;b>%1$.1f&lt;/b> &lt;/font> (%2$d reviews)</string>
    <!--    <string name="reviews2">&lt;span style="color:#FF795B"> &lt;b> %1$.1f &lt;/b>&lt;/span> (%2$d reviews)</string>-->

    <string name="reviews2">&lt;span style="color:#FF795B"> &lt;b> %1$.1f &lt;/b>&lt;/span> (%2$d reviews) %3$s </string>
    <string name="price">&lt;span style="color:#000000"> &lt;b> %1$.2f &#8382; &lt;/b>&lt;/span> / hour </string>
    <string name="show_all_comments">Show all comments</string>
    <string name="warning">To protect your payment, never transfer money or communicate outside of CleanApp</string>
    <string name="report_this_user">Report this user</string>
    <string name="more_masters">More masters</string>
    <string name="reserve">Reserve</string>
    <string name="contact_master">Contact master</string>
    <string name="languages">Languages: %1$s</string>
    <string name="response_rate">Response rate: %1$s%</string>
    <string name="cancellation">Cancellation policy</string>
    <string name="orders">orders</string>
    <string name="what_to_clean">What to clean?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign up</string>
    <string name="repeat_password">Repeat password:</string>
    <string name="i_agree_with_the_terms_amp_conditions"><![CDATA[I agree with the Terms & Conditions]]></string>
    <string name="create_account">Create account</string>
    <string name="create_master_s_account">Create master’s account</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="messages">Messages</string>
    <string name="response_rate_100">Response rate: 100%</string>
    <string name="all_comments">All comments</string>
    <string name="cancellation_policy">Cancellation policy</string>
    <string name="cancel_by">Cancel by</string>
    <string name="_50_refund">50% refund</string>
    <string name="cancel">Cancel</string>
    <string name="call_your_master">Call your master</string>
    <string name="open_chat">Open chat</string>
    <string name="category_date">%1$s &#183; %2$s</string>
    <string name="price_value">%1$.2f &#8382;</string>
    <string name="start_as_master">Start As Master</string>
    <string name="master">master</string>
    <string name="chooser_city">Choose City:</string>
    <string name="city">City:</string>
    <string name="cancelled">Cancelled:</string>
    <string name="master_full_name">%1$s %2$s</string>
    <string name="order_details">Order details</string>
    <string name="ongoing">OnGoing</string>
    <string name="cat_price">%1$s &#183; %2$.2f&#8382;</string>
    <string name="reservation_date">Reservation date</string>
    <string name="you_paid">You paid</string>
    <string name="cleaning_fee">%1$.2f&#8382; x %2$.1f hours</string>
    <string name="service_fee">Service fee</string>
    <string name="cleaning_time">Cleaning time</string>
    <string name="total">Total</string>
    <string name="cancel_reservation">Cancel reservation</string>
    <string name="finished">Finished</string>
    <string name="category">Category:</string>
    <string name="choose">Choose</string>
    <string name="language">Language:</string>
    <string name="have_own_cleaning_supplements">have own cleaning supplements</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="_0">0.00</string>
    <string name="availability">Availability</string>

    <string name="rating_name">%1$.1f %2$s</string>
    <string name="arrival_details">Arrival details</string>
    <string name="date_and_time">Date and time</string>
    <string name="address">Address</string>
    <string name="todo">todo</string>
    <string name="price_details">Price details</string>
    <string name="category_price">Category price</string>
    <string name="hours_needed">Hours needed</string>
    <string name="n_hours">%1$.1f hours</string>
    <string name="cleaning_price">Cleaning price</string>
    <string name="add_card">&#43; Add card</string>
    <string name="card_digits">&#183;&#183;&#183;&#183; %1$s</string>
    <string name="edit">&lt;u>Edit&lt;/u></string>
    <string name="message_your_master">Message your master</string>
    <string name="descript_important_details">Let your master know all the important details</string>
    <string name="registration_year">Joined %1$s</string>
    <string name="chat_intro">Hi %1$s!..</string>
    <string name="cancellation_details">Free cancellation %1$d days prior to master\'s arrival day. After that, you will be charged with 30 of total reservation price plus service fee. </string>
    <string name="cancellation_learn_more">Make sure this master\'s cancellation policy works for you. &lt;u>Learn more&lt;/u></string>
    <string name="agree_policies">By selecting the button below, I agree to the
        &lt;span style="color:#2062CB"> &lt;u>Safety Rules&lt;/u>&lt;/span>,
        &lt;span style="color:#2062CB"> &lt;u>Cancellation Policy&lt;/u>&lt;/span>,
        &lt;span style="color:#2062CB"> &lt;u>CleanApp\’s social-distancing and other COVID-19-related guidelines&lt;/u>&lt;/span>,
        and the
        &lt;span style="color:#2062CB"> &lt;u>Client Refund Policy&lt;/u>&lt;/span>.
        I also agree to pay the total amount shown which includes Service Fees.</string>
    <string name="confirm_and_pay">Confirm and pay</string>
    <string name="message_sent">&lt;span style="color:#5B89FF"> &lt;b>Message sent!&lt;/b>&lt;/span>,</string>
    <string name="card_holder">Card Holder</string>
    <string name="add_new_card">Add new card</string>
    <string name="entire_apartment">Entire apartment %1$s</string>
    <string name="pay_with">Pay with</string>
    <string name="card_number">Card number</string>
    <string name="cvv">CVV</string>
    <string name="card_add">Add card</string>


    <plurals name="cancellation_policy">
        <item quantity="one">>Free cancellation %d day prior</item>
        <item quantity="other">>Free cancellation %d days prior</item>
    </plurals>

    <string name="category_title">Choose service category</string>
    <string name="date_title">When do you want your place to get cleaned?</string>
    <string name="rooms_title">How many rooms do you want to clean?</string>
    <string name="city_title">Whic city are you in?</string>
    <string name="default_notification_channel_id">CHANNEL_ID</string>

    <!-- Preference Titles -->
    <string name="account_settings">Account settings</string>
    <string name="hosting">Hosting</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="profile">Profile</string>
    <string name="payments_and_payouts">Payments and payouts</string>
    <string name="notifications">Notifications</string>
    <string name="change_language">Change language</string>
    <string name="switch_to_master">Switch to master</string>
    <string name="your_guidebook">Your guidebook</string>
    <string name="personal_information">Personal information</string>
    <string name="contact_support">Contact support</string>
    <string name="sign_out">Sign out</string>
    <string name="user_data">user_data</string>
    <string name="seen">seen</string>
    <string name="_10">10</string>
    <string name="rating_start">rating_start</string>
    <string name="are_you_sure_that_you_want_to_report_this_user">Are you sure that you want to report this user?</string>
    <string name="sign_up">Sign up</string>
    <string name="rate_your_master">Rate your master</string>
    <string name="leave_comment">Leave comment</string>
    <string name="ok">OK</string>
    <string name="add_review">Add review</string>
    <string name="button_close">button_close</string>
    <string name="choose_your_city">Choose your city</string>
    <string name="choose_your_categories">Choose your categories</string>
    <string name="choose_your_languages">Which languages do you speak?</string>


</resources>